# rsserpent-plugin-fulltext

./: README.md  pyproject.toml
.github/workflows/: test.yaml
rsserpent_plugin_fulltext/: __init__.py  full.py  route.py  xmlget.py  xmlgetdom.py
tests/: test_route.py
