[tool.poetry]
name = "rsserpent-plugin-fulltext"
version = "0.1.0"

authors = ["wuzhongyi1105 <dw@watelier.cn>"]
description = "An rsserpent plugin to get full ariticle."
keywords = ["rss"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"
rsserpent = ">=0.1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.15.0"
# testing
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
requests = "^2.26.0"

[tool.poetry.plugins."rsserpent.plugin"]
"fulltext" = "rsserpent_plugin_fulltext:plugin"

[tool.black]
include = '\.pyi?$'
target-version = ["py36", "py37", "py38", "py39"]

[tool.coverage.run]
include = ["rsserpent_plugin_fulltext/*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover"
]

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
lines_after_imports = 2
profile = "black"

[tool.nitpick]
style = "https://raw.githubusercontent.com/RSSerpent/RSSerpent/master/styles/main.toml"
cache = "1 day"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
